# annotate-snippets

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
lib/: index.d.ts  index.js  index.ts
pkg/: index.d.ts  index.js  index_bg.wasm  index_bg.wasm.d.ts
src/: lib.rs
